--- a/scss/main.scss
+++ b/scss/main.scss
@@ -167,6 +167,13 @@ button:hover {
   row-gap: 24px;
 }
 
+.grid-2-col {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(180px, 600px));
+  column-gap: 24px;
+  row-gap: 24px;
+}
+
 .main {
   overflow: hidden;
 }
@@ -429,7 +436,7 @@ $secondarycolor: $palegreen-light;
 }
 
 .about-article {
-  max-width: 1000px;
+  max-width: 800px;
   padding: 100px 20px;
   margin: 0 auto;
   text-align: center;
@@ -461,10 +468,43 @@ $secondarycolor: $palegreen-light;
     margin-left: 40px;
     width: 50%;
   }
+  &__mini-gallery {
+    display: flex;
+    flex-flow: row wrap;
+    column-gap: 0px;
+    row-gap: 0px;
+  }
 }
 
 .testimonials {
-  margin: 0;
+  background-image: url("../images/testimonials-na-glownej-background.jpg");
+  background-attachment: scroll;
+  background-position: 0 0px;
+  background-repeat: no-repeat;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 530px;
+
+  &__container {
+    max-width: 900px;
+    text-align: center;
+  }
+
+  &__icon {
+    color: $whiteyellow;
+    font-size: 2.7em;
+  }
+
+  &__text {
+    color: $whiteyellow;
+    font-size: 1.7em;
+  }
+  &__signature {
+    font-size: 2em;
+    font-style: italic;
+    color: $rawsienna;
+  }
 }
 
 .contact {
@@ -482,9 +522,6 @@ $secondarycolor: $palegreen-light;
   &__info {
     max-width: 800px;
     margin: 0 auto;
-    display: grid;
-    grid-template-columns: 1fr 280px 1fr;
-    grid-column-gap: 40px;
     padding: 0 0 100px;
     font-family: "Nunito Sans", serif;
   }
@@ -508,6 +545,9 @@ $secondarycolor: $palegreen-light;
   }
   &__link {
     color: $brown-alt;
+    font-size: 1.4em;
+    font-weight: 600;
+
     &--expose {
       font-size: 1.2em;
       font-weight: 600;
@@ -519,18 +559,84 @@ $secondarycolor: $palegreen-light;
     }
   }
   &__button {
-    border-radius: 3px;
     background-color: $rawsienna;
     color: $white;
+    border-radius: 3px;
+    padding: 14px 40px;
+    margin: 20px 0;
   }
   &__button:hover {
     background-color: $rawsienna-light;
   }
 }
 
+.contact-form {
+  max-width: 420px;
+  margin: 50px auto;
+  &__input {
+    color: $whiteyellow;
+    font-family: Helvetica, Arial, sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 5px;
+    line-height: 22px;
+    background-color: transparent;
+    border: 2px solid $yellow;
+    transition: all 0.3s;
+    padding: 13px;
+    margin-bottom: 8px;
+    width: 100%;
+    box-sizing: border-box;
+    outline: 0;
+  }
+  &__input:focus {
+    border: 2px solid $happy-yellow;
+  }
+  &__textarea {
+    height: 150px;
+    color: $whiteyellow;
+    font-family: "Nunito Sans", Verdana, sans-serif;
+    font-weight: 500;
+    font-size: 18px;
+    border-radius: 5px;
+    line-height: 22px;
+    background-color: transparent;
+    border: 2px solid $yellow;
+    transition: all 0.3s;
+    padding: 13px;
+    margin-bottom: 15px;
+    width: 100%;
+    box-sizing: border-box;
+    outline: 0;
+  }
+  &__textarea:focus {
+    border: 2px solid $happy-yellow;
+  }
+
+  &__submit {
+    font-family: "Montserrat", Arial, Helvetica, sans-serif;
+    width: 100%;
+    background: $yellow;
+    border-radius: 5px;
+    border: 0;
+    cursor: pointer;
+    color: $brown;
+    font-size: 24px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    transition: all 0.3s;
+    margin-top: -4px;
+    font-weight: 700;
+    text-transform: uppercase;
+  }
+  &__submit:hover {
+    background: $happy-yellow;
+  }
+}
+
 .fund-info {
-  background-color: $brown-light;
-  padding: 120px 0;
+  background-color: $brown;
+  padding: 20px 0;
   text-align: center;
 
   &__heading {
@@ -539,22 +645,55 @@ $secondarycolor: $palegreen-light;
   }
   &__text {
     max-width: 800px;
-    color: $white;
+    color: $whiteyellow;
     font-size: 0.9em;
-    margin: 0 auto 20px;
+    margin: 0 auto 30px;
   }
 }
 
 .footer {
   background-color: $brown-dark;
-  padding: 120px 0;
+  padding: 80px 0;
   text-align: center;
+
+  &__4-col {
+    display: grid;
+    grid-template-columns: repeat(4, minmax(180px, 500px));
+    column-gap: 24px;
+    row-gap: 24px;
+    margin-bottom: 80px;
+    color: $brown-light;
+  }
+
+  &__section {
+    border-right: 1px solid $brown-alt;
+  }
 
   &__text {
     max-width: 800px;
-    color: $white;
+    color: $brown-alt;
     font-size: 1em;
     margin: 0 auto 20px;
+  }
+  &__contact-link {
+    color: $brown-light;
+    font-size: 1.4em;
+  }
+
+  &__social {
+    font-size: 3em;
+  }
+  &__menu-links-ul {
+    margin: 10px 20px;
+    list-style-type: none;
+
+  }
+  &__menu-links-ul li {
+    margin-bottom: 8px;
+  }
+  &__menu-links-a {
+    color: $brown-light;
+    font-size: 1.3em;
   }
 }
 
@@ -632,6 +771,8 @@ $secondarycolor: $palegreen-light;
   }
 }
 
+/* ................................................................................................ */
+/* ................... */
 /* MEDIA QUERIES */
 /* ............. */
 @media screen and (min-width: 468px) {
@@ -666,7 +807,7 @@ $secondarycolor: $palegreen-light;
       font-size: 1.6em;
     }
     &__info {
-      grid-column-gap: 80px;
+      grid-column-gap: 40px;
     }
 
     &__link {
