--- a/scss/main.scss
+++ b/scss/main.scss
@@ -206,7 +206,7 @@ button:hover {
   flex-flow: row;
   align-content: center;
   justify-content: space-between;
-  align-items: center;
+  align-items: normal;
   padding: 0 20px;
   opacity: 0.93;
   z-index: 10;
@@ -229,33 +229,28 @@ button:hover {
   position: fixed;
   top: 0;
   background: $brown-dark;
-}
 
-.shrink-and-sticky .site-header__logo {
-  height: 60px;
-  margin-top: 6px;
-}
+  .site-header__logo {
+    height: 60px;
+    margin-top: 6px;
+  }
 
-.shrink-and-sticky .site-header__logo-img {
-  height: 90%;
-}
+  .site-header__logo-img {
+    height: 90%;
+  }
 
-.shrink-and-sticky .navigation__link {
-  font-size: 15px;
-}
+  .mainmenu {
+    margin-top: 8px;
+    background-color: $brown-dark;
+  }
 
-.navigation {
-  display: none;
-}
+  .mainmenu ul {
+    background-color: $brown-dark;
+  }
 
-.navigation--open {
-  display: block;
-}
-
-.hamburger {
-  background-color: $yellow;
-  color: #5a4131;
-  font-size: 3em;
+  .navigation__link {
+    font-size: 15px;
+  }
 }
 
 .navigation__link {
@@ -276,87 +271,7 @@ button:hover {
   color: $happy-yellow;
 }
 
-$maincolor: $paleyellow;
-$secondarycolor: $palegreen-light;
-
-@mixin drop-menu-transform($value) {
-  -webkit-transform: ($value);
-  -moz-transform: ($value);
-  -ms-transform: ($value);
-  transform: ($value);
-}
-@mixin drop-menu-transition($value) {
-  -webkit-transition: ($value);
-  -moz-transition: ($value);
-  -ms-transition: ($value);
-  transition: ($value);
-}
-
-#main-menu-ul {
-  position: relative;
-  list-style: none;
-  background: inherit;
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 0;
-  margin: 50px auto;
-  li {
-    display: inline-block;
-    position: relative;
-    padding: 15px 16px;
-    cursor: pointer;
-    z-index: 5;
-    width: auto;
-  }
-  li .navigation__listitem--drop {
-    min-width: $min-width;
-  }
-}
-
-.main-menu-drop {
-  overflow: hidden;
-  list-style: none;
-  position: absolute;
-  padding: 0;
-  width: $min-width;
-  left: 0;
-  top: 48px;
-  div {
-    @include drop-menu-transform(translate(0, -100%));
-    @include drop-menu-transition(all 0.5s 0.1s);
-    position: relative;
-  }
-  li {
-    display: block;
-    padding: 0;
-    width: 100%;
-    background: $secondarycolor;
-  }
-  li:hover {
-    background-color: $paleyellow;
-  }
-}
-
-#main-menu-marker {
-  height: 5px;
-  background: $yellow;
-  position: absolute;
-  bottom: 0;
-  width: $min-width;
-  z-index: 2;
-  @include drop-menu-transition(all 0.35s);
-}
-
-@for $i from 1 through 4 {
-  #main-menu-ul li:nth-child(#{$i}) {
-    &:hover ul div {
-      @include drop-menu-transform(translate(0, 0));
-    }
-    &:hover ~ #main-menu-marker {
-      @include drop-menu-transform(translate(#{(-1 + $i) * $min-width}, 0));
-    }
-  }
-}
+@import "scss/mainmenu.scss";
 
 .slider {
   min-height: 629px;
@@ -686,7 +601,6 @@ $secondarycolor: $palegreen-light;
   &__menu-links-ul {
     margin: 10px 20px;
     list-style-type: none;
-
   }
   &__menu-links-ul li {
     margin-bottom: 8px;
@@ -792,16 +706,6 @@ $secondarycolor: $palegreen-light;
     max-width: 33%;
   }
 
-  .navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .hamburger {
-    display: none;
-  }
-
   .contact {
     &__heading {
       font-size: 1.6em;
@@ -871,6 +775,11 @@ $secondarycolor: $palegreen-light;
       height: auto;
     }
   }
+
+  .shrink-and-sticky {
+    height: 60px;
+  }
+
   .navigation__link {
     margin-right: 20px;
     font-size: 16px;
