--- a/styles/style.css
+++ b/styles/style.css
@@ -239,7 +239,7 @@ button:hover {
   flex-flow: row;
   align-content: center;
   justify-content: space-between;
-  align-items: center;
+  align-items: normal;
   padding: 0 20px;
   opacity: 0.93;
   z-index: 10;
@@ -257,27 +257,18 @@ button:hover {
   position: fixed;
   top: 0;
   background: #332821; }
-
-.shrink-and-sticky .site-header__logo {
-  height: 60px;
-  margin-top: 6px; }
-
-.shrink-and-sticky .site-header__logo-img {
-  height: 90%; }
-
-.shrink-and-sticky .navigation__link {
-  font-size: 15px; }
-
-.navigation {
-  display: none; }
-
-.navigation--open {
-  display: block; }
-
-.hamburger {
-  background-color: #ffcb69;
-  color: #5a4131;
-  font-size: 3em; }
+  .shrink-and-sticky .site-header__logo {
+    height: 60px;
+    margin-top: 6px; }
+  .shrink-and-sticky .site-header__logo-img {
+    height: 90%; }
+  .shrink-and-sticky .mainmenu {
+    margin-top: 8px;
+    background-color: #332821; }
+  .shrink-and-sticky .mainmenu ul {
+    background-color: #332821; }
+  .shrink-and-sticky .navigation__link {
+    font-size: 15px; }
 
 .navigation__link {
   font-size: 14px;
@@ -293,6 +284,138 @@ button:hover {
 .navigation__link:hover {
   color: #ffb323; }
 
+.mainmenu {
+  margin-top: 28px; }
+
+.mainmenu ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  background-color: #7a8257; }
+
+.mainmenu .mainmenu-ul {
+  clear: both;
+  max-height: 0;
+  -webkit-transition: max-height .2s ease-out;
+  transition: max-height .2s ease-out;
+  -webkit-transition: background-color 0.4s ease;
+  transition: background-color 0.4s ease; }
+
+.mainmenu li a {
+  display: block;
+  padding: 10px 20px;
+  text-decoration: none;
+  text-transform: uppercase; }
+
+.mainmenu li a:hover,
+.mainmenu .menu-btn:hover {
+  background-color: #9b9b7a; }
+
+.mainmenu__dropdown-ul {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  perspective: 1000px;
+  display: none; }
+
+.dropdown:hover .dropdown_menu--animated {
+  display: block; }
+
+/* menu icon */
+.mainmenu .menu-icon {
+  color: #ffcb69;
+  font-size: 3em;
+  cursor: pointer;
+  display: inline-block;
+  float: right;
+  padding: 28px 20px;
+  position: relative;
+  user-select: none; }
+
+.mainmenu .menu-icon .navicon {
+  background: #ffcb69;
+  display: block;
+  height: 4px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 28px; }
+
+.mainmenu .menu-icon .navicon:before,
+.mainmenu .menu-icon .navicon:after {
+  background: #ffcb69;
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%; }
+
+.mainmenu .menu-icon .navicon:before {
+  top: 8px; }
+
+.mainmenu .menu-icon .navicon:after {
+  top: -8px; }
+
+/* menu btn */
+.mainmenu .menu-btn {
+  display: none; }
+
+.mainmenu .menu-btn:checked ~ .mainmenu-ul {
+  max-height: 240px;
+  /*  position: absolute;
+    right: 0;
+    top: 130px;
+    width: 100vw;
+    text-align: right; */ }
+
+.mainmenu .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent; }
+
+.mainmenu .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg); }
+
+.mainmenu .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg); }
+
+.mainmenu .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.mainmenu .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0; }
+
+/* 48em = 768px */
+@media (min-width: 48em) {
+  .mainmenu li {
+    float: left; }
+  .mainmenu li a {
+    padding: 10px 30px; }
+  .mainmenu .mainmenu-ul {
+    clear: none;
+    float: right;
+    max-height: none; }
+  .mainmenu .menu-icon {
+    display: none; } }
+
+@media (min-width: 1025px) {
+  .mainmenu {
+    margin-top: 48px; } }
+
+/* $maincolor: $paleyellow;
+$secondarycolor: $palegreen-light;
+
+@mixin drop-menu-transform($value) {
+  -webkit-transform: ($value);
+  -moz-transform: ($value);
+  -ms-transform: ($value);
+  transform: ($value);
+}
+@mixin drop-menu-transition($value) {
+  -webkit-transition: ($value);
+  -moz-transition: ($value);
+  -ms-transition: ($value);
+  transition: ($value);
+}
+
 #main-menu-ul {
   position: relative;
   list-style: none;
@@ -300,103 +423,55 @@ button:hover {
   text-transform: uppercase;
   display: inline-block;
   padding: 0;
-  margin: 50px auto; }
-  #main-menu-ul li {
+  margin: 50px auto;
+  li {
     display: inline-block;
     position: relative;
     padding: 15px 16px;
     cursor: pointer;
     z-index: 5;
-    width: auto; }
-  #main-menu-ul li .navigation__listitem--drop {
-    min-width: 172px; }
+    width: auto;
+  }
+  li .mainmenu__listitem--drop {
+    min-width: $min-width;
+  }
+}
 
 .main-menu-drop {
   overflow: hidden;
   list-style: none;
   position: absolute;
   padding: 0;
-  width: 172px;
+  width: $min-width;
   left: 0;
-  top: 48px; }
-  .main-menu-drop div {
-    -webkit-transform: translate(0, -100%);
-    -moz-transform: translate(0, -100%);
-    -ms-transform: translate(0, -100%);
-    transform: translate(0, -100%);
-    -webkit-transition: all 0.5s 0.1s;
-    -moz-transition: all 0.5s 0.1s;
-    -ms-transition: all 0.5s 0.1s;
-    transition: all 0.5s 0.1s;
-    position: relative; }
-  .main-menu-drop li {
+  top: 48px;
+  div {
+    @include drop-menu-transform(translate(0, -100%));
+    @include drop-menu-transition(all 0.5s 0.1s);
+    position: relative;
+  }
+  li {
     display: block;
     padding: 0;
     width: 100%;
-    background: #9b9b7a; }
-  .main-menu-drop li:hover {
-    background-color: #ffe2ad; }
+    background: $secondarycolor;
+  }
+  li:hover {
+    background-color: $paleyellow;
+  }
+}
 
 #main-menu-marker {
   height: 5px;
-  background: #ffcb69;
+  background: $yellow;
   position: absolute;
   bottom: 0;
-  width: 172px;
+  width: $min-width;
   z-index: 2;
-  -webkit-transition: all 0.35s;
-  -moz-transition: all 0.35s;
-  -ms-transition: all 0.35s;
-  transition: all 0.35s; }
+  @include drop-menu-transition(all 0.35s);
+}
 
-#main-menu-ul li:nth-child(1):hover ul div {
-  -webkit-transform: translate(0, 0);
-  -moz-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  transform: translate(0, 0); }
-
-#main-menu-ul li:nth-child(1):hover ~ #main-menu-marker {
-  -webkit-transform: translate(0px, 0);
-  -moz-transform: translate(0px, 0);
-  -ms-transform: translate(0px, 0);
-  transform: translate(0px, 0); }
-
-#main-menu-ul li:nth-child(2):hover ul div {
-  -webkit-transform: translate(0, 0);
-  -moz-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  transform: translate(0, 0); }
-
-#main-menu-ul li:nth-child(2):hover ~ #main-menu-marker {
-  -webkit-transform: translate(172px, 0);
-  -moz-transform: translate(172px, 0);
-  -ms-transform: translate(172px, 0);
-  transform: translate(172px, 0); }
-
-#main-menu-ul li:nth-child(3):hover ul div {
-  -webkit-transform: translate(0, 0);
-  -moz-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  transform: translate(0, 0); }
-
-#main-menu-ul li:nth-child(3):hover ~ #main-menu-marker {
-  -webkit-transform: translate(344px, 0);
-  -moz-transform: translate(344px, 0);
-  -ms-transform: translate(344px, 0);
-  transform: translate(344px, 0); }
-
-#main-menu-ul li:nth-child(4):hover ul div {
-  -webkit-transform: translate(0, 0);
-  -moz-transform: translate(0, 0);
-  -ms-transform: translate(0, 0);
-  transform: translate(0, 0); }
-
-#main-menu-ul li:nth-child(4):hover ~ #main-menu-marker {
-  -webkit-transform: translate(516px, 0);
-  -moz-transform: translate(516px, 0);
-  -ms-transform: translate(516px, 0);
-  transform: translate(516px, 0); }
-
+} */
 .slider {
   min-height: 629px;
   display: flex;
@@ -732,12 +807,6 @@ button:hover {
     max-width: 50%; }
   .one-third {
     max-width: 33%; }
-  .navigation {
-    display: flex;
-    justify-content: space-between;
-    align-items: center; }
-  .hamburger {
-    display: none; }
   .contact__heading {
     font-size: 1.6em; }
   .contact__info {
@@ -784,6 +853,8 @@ button:hover {
       margin-top: 34px; }
     .site-header__logo-img {
       height: auto; }
+  .shrink-and-sticky {
+    height: 60px; }
   .navigation__link {
     margin-right: 20px;
     font-size: 16px; }
