--- a/styles/style.css
+++ b/styles/style.css
@@ -248,7 +248,7 @@ button:hover {
   .site-header__logo {
     height: 100%;
     margin-left: 0;
-    margin-top: 20px; }
+    margin-top: 10px; }
   .site-header__logo-img {
     height: 80%; }
 
@@ -259,7 +259,7 @@ button:hover {
   background: #332821; }
   .shrink-and-sticky .site-header__logo {
     height: 60px;
-    margin-top: 6px; }
+    margin-top: 2px; }
   .shrink-and-sticky .site-header__logo-img {
     height: 90%; }
   .shrink-and-sticky .mainmenu {
@@ -290,6 +290,7 @@ button:hover {
 .mainmenu ul {
   margin: 0;
   padding: 0;
+  padding-bottom: 20ps;
   list-style: none;
   overflow: hidden;
   background-color: #7a8257; }
@@ -297,8 +298,8 @@ button:hover {
 .mainmenu .mainmenu-ul {
   clear: both;
   max-height: 0;
-  -webkit-transition: max-height .2s ease-out;
-  transition: max-height .2s ease-out;
+  -webkit-transition: max-height 0.2s ease-out;
+  transition: max-height 0.2s ease-out;
   -webkit-transition: background-color 0.4s ease;
   transition: background-color 0.4s ease; }
 
@@ -308,20 +309,70 @@ button:hover {
   text-decoration: none;
   text-transform: uppercase; }
 
+.mainmenu li .mainmenu__link--drop a {
+  padding: 10px 2px; }
+
+.drop-item .mainmenu__link--drop {
+  padding: 10px 4px;
+  font-size: 16px;
+  text-transform: none; }
+
 .mainmenu li a:hover,
 .mainmenu .menu-btn:hover {
   background-color: #9b9b7a; }
 
-.mainmenu__dropdown-ul {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 100%;
-  perspective: 1000px;
-  display: none; }
+.drop-menu {
+  display: flex;
+  flex-direction: column;
+  /* This never changes */
+  align-items: flex-start;
+  width: 150px;
+  /* Allows sub buttons to stretch across button width in main-menu*/
+  transition: max-height .4s, opacity .3s;
+  max-height: 0;
+  opacity: 0;
+  background-color: #7a8257; }
 
-.dropdown:hover .dropdown_menu--animated {
-  display: block; }
+.drop-menu > .drop-item {
+  height: 100%;
+  transition: transform .4s;
+  transform: translateY(-300%);
+  background: #7a8257;
+  /* Makes the menu effects visible on close */
+  min-width: 170px; }
+
+.dropdown-wrapper:hover .drop-menu {
+  max-height: 300px;
+  opacity: 1; }
+
+/* The specifity keeps styles from affecting main menu button */
+.dropdown-wrapper:hover > .drop-menu .drop-item {
+  transform: translateY(0%); }
+
+.effect {
+  transition: max-height 0s;
+  opacity: 1;
+  background: transparent; }
+
+.effect .drop-item {
+  transform: translateY(0%); }
+
+.scissor .drop-item {
+  transform: translateX(-100%); }
+
+/* Selects every other menu button to slide the opposite way */
+.scissor .drop-item:nth-child(2n+1) {
+  transform: translateX(100%); }
+
+.dropdown-wrapper:hover .scissor .drop-item {
+  transform: translateX(0%); }
+
+.fade-in .drop-item {
+  transition: opacity .5s;
+  opacity: 0; }
+
+.dropdown-wrapper:hover .fade-in .drop-item {
+  opacity: 1; }
 
 /* menu icon */
 .mainmenu .menu-icon {
@@ -339,17 +390,17 @@ button:hover {
   display: block;
   height: 4px;
   position: relative;
-  transition: background .2s ease-out;
+  transition: background 0.2s ease-out;
   width: 28px; }
 
 .mainmenu .menu-icon .navicon:before,
 .mainmenu .menu-icon .navicon:after {
   background: #ffcb69;
-  content: '';
+  content: "";
   display: block;
   height: 100%;
   position: absolute;
-  transition: all .2s ease-out;
+  transition: all 0.2s ease-out;
   width: 100%; }
 
 .mainmenu .menu-icon .navicon:before {
@@ -363,7 +414,7 @@ button:hover {
   display: none; }
 
 .mainmenu .menu-btn:checked ~ .mainmenu-ul {
-  max-height: 240px;
+  max-height: 540px;
   /*  position: absolute;
     right: 0;
     top: 130px;
@@ -394,7 +445,9 @@ button:hover {
     float: right;
     max-height: none; }
   .mainmenu .menu-icon {
-    display: none; } }
+    display: none; }
+  .mainmenu ul {
+    background-color: transparent; } }
 
 @media (min-width: 1025px) {
   .mainmenu {
@@ -489,7 +542,7 @@ $secondarycolor: $palegreen-light;
 
 .offer {
   background-color: #5a4131;
-  display: grid;
+  display: block;
   grid-template-columns: repeat(4, minmax(220px, 480px));
   column-gap: 1px;
   row-gap: 1px;
@@ -500,21 +553,23 @@ $secondarycolor: $palegreen-light;
   top: 0; }
 
 .offer-article {
-  padding: 100px 80px;
+  padding: 40px 40px 10px;
+  margin: 0 40px 20px;
   background-color: #7a8257;
   text-align: center;
-  height: 1000px;
   -webkit-transition: all 0.4s ease;
   transition: all 0.4s ease; }
   .offer-article__heading {
-    font-size: 32px;
+    font-size: 28px;
     color: #e8dabf; }
   .offer-article__thumb {
     border-radius: 50%;
     border: 1px solid #5a4131; }
   .offer-article__text {
     color: #e8dabf;
-    text-align: left; }
+    text-align: center;
+    max-width: 480px;
+    margin: 0 auto; }
   .offer-article__button {
     font-family: "Nunito Sans", Verdana, sans-serif;
     text-transform: uppercase;
@@ -574,7 +629,8 @@ $secondarycolor: $palegreen-light;
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 530px; }
+  min-height: 530px;
+  padding: 0 20px; }
   .testimonials__container {
     max-width: 900px;
     text-align: center; }
@@ -694,7 +750,7 @@ $secondarycolor: $palegreen-light;
 
 .fund-info {
   background-color: #5a4131;
-  padding: 20px 0;
+  padding: 20px 40px;
   text-align: center; }
   .fund-info__text {
     max-width: 800px;
@@ -707,7 +763,8 @@ $secondarycolor: $palegreen-light;
   padding: 80px 0;
   text-align: center; }
   .footer__4-col {
-    display: grid;
+    display: block;
+    padding: 40px 0;
     grid-template-columns: repeat(4, minmax(180px, 500px));
     column-gap: 24px;
     row-gap: 24px;
@@ -843,14 +900,17 @@ $secondarycolor: $palegreen-light;
     float: right;
     margin-left: 40px;
     margin-bottom: 20px;
-    width: 50%; } }
+    width: 50%; }
+  .footer__4-col {
+    display: grid;
+    padding: 20px; } }
 
 @media screen and (min-width: 1024px) {
   .site-header {
     height: 140px;
     padding: 0 40px; }
     .site-header__logo {
-      margin-top: 34px; }
+      margin-top: 19px; }
     .site-header__logo-img {
       height: auto; }
   .shrink-and-sticky {
@@ -864,6 +924,13 @@ $secondarycolor: $palegreen-light;
     padding: 15px 20px; }
   #main-menu-ul li .navigation__listitem--drop {
     min-width: 172px; }
+  .offer {
+    display: grid; }
+  .offer-article {
+    padding: 40px 20px;
+    margin: 0; }
+    .offer-article__text {
+      text-align: left; }
   .subpage {
     padding: 100px 20px;
     max-width: 1000px; }
@@ -872,4 +939,12 @@ $secondarycolor: $palegreen-light;
 
 @media screen and (min-width: 1200px) {
   .site-header {
-    padding: 0 80px; } }
+    padding: 0 80px; }
+  .offer-article {
+    padding: 60px 40px; } }
+
+@media screen and (min-width: 1400px) {
+  .offer-article {
+    padding: 100px 80px; }
+    .offer-article__heading {
+      font-size: 32px; } }
