--- a/styles/style.css
+++ b/styles/style.css
@@ -95,7 +95,7 @@ body {
   font-family: "Libre Baskerville", serif; }
 
 .bkgd-image {
-  background-image: url("../images/body-background-dom-pod-wierzba.jpg");
+  background-image: url("../images/body-background-dom-pod-wierzba-800x533.jpg");
   background-attachment: fixed;
   background-position: 0 0px;
   background-repeat: no-repeat; }
@@ -114,8 +114,9 @@ h2 {
   font-weight: normal; }
 
 p {
-  line-height: 1.6em;
-  margin: 8px 0 12px; }
+  line-height: 1.4em;
+  margin: 8px 0 12px;
+  font-size: 0.9em; }
 
 a {
   text-decoration: none;
@@ -526,18 +527,18 @@ $secondarycolor: $palegreen-light;
 
 } */
 .slider {
-  min-height: 629px;
+  min-height: 400px;
   display: flex;
   justify-content: center;
   align-items: center; }
   .slider__header {
     text-align: center; }
   .slider__heading2 {
-    font-size: 4.5em;
+    font-size: 2.5em;
     text-transform: uppercase;
     margin-bottom: 2px; }
   .slider__heading3 {
-    font-size: 3.7em;
+    font-size: 1.7em;
     margin-top: 12px; }
 
 .offer {
@@ -601,11 +602,11 @@ $secondarycolor: $palegreen-light;
     margin-bottom: 80px; }
   .about-article__text {
     color: #e8dabf;
-    text-align: justify; }
+    text-align: left; }
   .about-article__text--intro {
     color: #e8dabf;
-    text-align: justify;
-    font-size: 1.5em; }
+    text-align: left;
+    font-size: 1.2em; }
   .about-article__image {
     margin-right: 1px;
     display: inline-block; }
@@ -613,14 +614,14 @@ $secondarycolor: $palegreen-light;
     float: left;
     margin-right: 40px; }
   .about-article__image--right {
-    float: right;
-    margin-left: 40px;
-    width: 50%; }
+    width: 100%;
+    margin: 10px 0; }
   .about-article__mini-gallery {
     display: flex;
     flex-flow: row wrap;
     column-gap: 0px;
-    row-gap: 0px; }
+    row-gap: 1px;
+    justify-content: center; }
 
 .testimonials {
   background-image: url("../images/testimonials-na-glownej-background.jpg");
@@ -762,7 +763,7 @@ $secondarycolor: $palegreen-light;
 
 .footer {
   background-color: #332821;
-  padding: 80px 0;
+  padding: 20px 0;
   text-align: center; }
   .footer__4-col {
     display: grid;
@@ -804,18 +805,19 @@ $secondarycolor: $palegreen-light;
 
 .subpage-article__heading {
   color: #d08c60;
-  font-size: 2.6em;
+  font-size: 2.2em;
   margin-top: 0;
   margin-bottom: 20px; }
 
 .subpage-article__heading2 {
   color: #d08c60;
-  font-size: 1.4em;
+  font-size: 1.3em;
   text-transform: none;
-  margin-bottom: 20px; }
+  margin-top: 30px;
+  margin-bottom: 12px; }
 
 .subpage-article__heading3 {
-  font-size: 1.3em;
+  font-size: 1.1em;
   margin-top: 30px;
   margin-bottom: 0; }
 
@@ -826,7 +828,7 @@ $secondarycolor: $palegreen-light;
 .subpage-article__text--intro {
   color: #e8dabf;
   text-align: left;
-  font-size: 1.2em; }
+  font-size: 1.1em; }
 
 .subpage-article__image--left {
   margin-bottom: 10px;
@@ -864,12 +866,33 @@ $secondarycolor: $palegreen-light;
     display: flex; } }
 
 @media screen and (min-width: 768px) {
+  .bkgd-image {
+    background-image: url("../images/body-background-dom-pod-wierzba-1024x457.jpg"); }
+  p {
+    line-height: 1.5em;
+    margin: 8px 0 12px;
+    font-size: 1.1em; }
   .off-on-mob {
     display: block; }
   .the-half {
     max-width: 50%; }
   .one-third {
     max-width: 33%; }
+  .slider {
+    min-height: 300px; }
+    .slider__heading2 {
+      font-size: 2.7em; }
+    .slider__heading3 {
+      font-size: 1.9em; }
+  .about-article__text {
+    text-align: justify; }
+  .about-article__text--intro {
+    text-align: justify;
+    font-size: 1.5em; }
+  .about-article__image--right {
+    float: right;
+    margin-left: 40px;
+    width: 50%; }
   .testimonials__icon {
     font-size: 2.7em; }
   .testimonials__text {
@@ -894,19 +917,17 @@ $secondarycolor: $palegreen-light;
   .footer__section {
     border-bottom: none; }
   .subpage-article__heading {
-    font-size: 3.3em;
+    font-size: 3em;
     margin-top: 20px;
     margin-bottom: 60px; }
   .subpage-article__heading2 {
-    font-size: 2em;
+    font-size: 1.7em;
     margin-top: 50px; }
   .subpage-article__text {
-    color: #e8dabf;
     text-align: justify; }
   .subpage-article__text--intro {
-    color: #e8dabf;
     text-align: justify;
-    font-size: 1.3em; }
+    font-size: 1.1em; }
   .subpage-article__image--left {
     float: left;
     margin-right: 40px;
@@ -919,6 +940,8 @@ $secondarycolor: $palegreen-light;
     width: 50%; } }
 
 @media screen and (min-width: 1024px) {
+  .bkgd-image {
+    background-image: url("../images/body-background-dom-pod-wierzba-1920x800.jpg"); }
   .site-header {
     height: 140px;
     padding: 0 40px; }
@@ -937,6 +960,12 @@ $secondarycolor: $palegreen-light;
     padding: 15px 20px; }
   #main-menu-ul li .navigation__listitem--drop {
     min-width: 172px; }
+  .slider {
+    min-height: 400px; }
+    .slider__heading2 {
+      font-size: 3.7em; }
+    .slider__heading3 {
+      font-size: 2.9em; }
   .offer {
     display: grid; }
   .offer-article {
@@ -948,11 +977,33 @@ $secondarycolor: $palegreen-light;
     padding: 100px 20px;
     max-width: 1000px; }
   .subpage-article__heading {
-    margin-bottom: 40px; } }
+    font-size: 3.3em;
+    margin-top: 20px;
+    margin-bottom: 40px; }
+  .subpage-article__heading2 {
+    font-size: 2em;
+    margin-top: 50px; }
+  .subpage-article__text {
+    text-align: justify; }
+  .subpage-article__text--intro {
+    text-align: justify;
+    font-size: 1.3em; }
+  .footer {
+    padding: 60px 0; } }
 
 @media screen and (min-width: 1200px) {
+  p {
+    line-height: 1.6em;
+    margin: 8px 0 12px;
+    font-size: 1.2em; }
   .site-header {
     padding: 0 80px; }
+  .slider {
+    min-height: 629px; }
+    .slider__heading2 {
+      font-size: 4.5em; }
+    .slider__heading3 {
+      font-size: 3.7em; }
   .offer-article {
     padding: 60px 40px; } }
 
